samples/_failures_safe/1761664927_f95bcc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70e48f01.c: In function ‘main’:
./samples/SAFE/__tmp_70e48f01.c:158: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_70e48f01.c:157:30: note: to match this ‘(’
  157 |             a.rows = read_int("Enter rows for matrix A (1-10): ", 1, MAX_DIM
      |                              ^
./samples/SAFE/__tmp_70e48f01.c:157:13: error: expected declaration or statement at end of input
  157 |             a.rows = read_int("Enter rows for matrix A (1-10): ", 1, MAX_DIM
      |             ^
./samples/SAFE/__tmp_70e48f01.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70e48f01.c:157:13: error: expected declaration or statement at end of input
